name:                ansible-warewulf-inventory
version:             0.1
synopsis:            Ansible dynamic inventory from Warewulf node database
license:             BSD3
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable ansible-warewulf-inventory
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
    base >=4.8 && <5,
    bytestring,
    process,
    text,
    hashable,
    unordered-containers,
    aeson,
    aeson-pretty
